--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1,3 +1,4 @@
+/* Modal */
 .ma-modal {
   position: fixed;
   inset: 0;
@@ -72,6 +73,7 @@
   background: #333;
 }
 
+/* Banner */
 .ma-banner {
   position: fixed;
   bottom: 16px;
